syntax = "proto3";

option csharp_namespace = "Shared.Contracts.Orders";

package shared.contracts.orders;

service OrderService {
  rpc Create (OrderCreateRequest) returns (OrderCreateResponse);
}

message OrderCreateRequest {
  string customer_id = 1;
  repeated string item_skus = 2;
  double total_amount = 3;
}

message OrderCreateResponse {
  string order_id = 1;
  bool accepted = 2;
}
